--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,6 @@
+---
+import "../styles/global.css";
+---
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -7,6 +10,7 @@
     <title>Joris Leger</title>
 </head>
 <body class="bg-blanc">
+    <slot />
     <nav id="navbar" class="text-noir">
         <div class="max-w-6xl mx-auto px-4">
             <div class="flex justify-between items-center h-16">
@@ -74,12 +78,12 @@
     </section>
 
     <section id="competences" class="bg-noir md:h-screen p-4 md:p-32">
-        <div class="bg-blanc rounded-3xl p-4 mt-10 md:p-10 md:h-full">
-            <h1 class="text-noir text-3xl font-semibold font-titre my-10">COMPÉTENCES</h1>
+        <div class="bg-blanc rounded-3xl p-4 md:p-10 md:h-auto">
+            <h1 class="text-noir text-3xl font-semibold font-titre mb-10">COMPÉTENCES</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-20">
                 <div>
                     <div class="pb-10">
-                        <h2 class="pb-3 text-noir font-titre text-xl">Les logiciels maîtrisés</h2>
+                        <h2 class=" text-noir font-titre text-xl">Les logiciels maîtrisés</h2>
                         <div class="flex flex-wrap gap-2">
                             <img src="/PremièrePro.svg" alt="Première Pro" width="48" height="48" loading="lazy">
                             <img src="/AfterEffect.svg" alt="After Effect" width="48" height="48" loading="lazy">
@@ -112,7 +116,40 @@
         </div>
     </section>
 
-    <section id="realisations" class="flex flex-col md:grid md:grid-flow-col bg-noir justify-center items-center gap-20 px-4 md:px-72 md:h-screen">
+    <section id="realisations" class="bg-blanc md:h-auto p-4 md:p-32">
+        <div class="bg-noir rounded-3xl p-4 md:p-10">
+            <h1 class="text-blanc text-3xl font-semibold font-titre my-10">RÉALISATIONS</h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-10 md:gap-20">
+                <div class="flex flex-col items-start justify-center md:justify-start h-full px-4 gap-10 md:h-auto">
+                    <div class="w-full md:w-96 h-auto bg-blanc rounded-lg shadow-lg border border-blanc overflow-hidden">
+                        <div class="bg-blanc p-3 flex items-center justify-between">
+                            <div class="flex space-x-2">
+                                <span class="w-3 h-3 bg-red-500 rounded-full"></span>
+                                <span class="w-3 h-3 bg-yellow-500 rounded-full"></span>
+                                <span class="w-3 h-3 bg-green-500 rounded-full"></span>
+                            </div>
+                        </div>
+                        <div class="flex-grow">
+                            <img src="/free-nature-images.jpg" alt="Nature" class="w-full h-full object-cover" width="600" height="400" loading="lazy">
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#" class="flex justify-center items-center w-48 p-2 rounded-lg bg-noir border-2 hover:bg-blanc text-blanc hover:text-noir font-semibold font-titre">Voir plus</a>
+                    </div>
+                </div>
+                <div class="px-4">
+                    <div class="mb-5">
+                        <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="mb-10">
+                        <p class="text-blanc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="" class="flex flex-col md:grid md:grid-flow-col bg-noir justify-center items-center gap-20 px-4 md:px-72 md:h-screen">
         <div class="mt-10 px-4">
             <div class="flex flex-row justify-between items-center gap-10 mb-10">
                 <h1 class="text-blanc text-3xl font-semibold font-titre">RÉALISATIONS</h1>
@@ -183,7 +220,7 @@
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
                         if (entry.isIntersecting) {
-                            if (entry.target.id === 'a_propos' || entry.target.id === 'competences' || entry.target.id === 'realisations') {
+                            if (entry.target.id === 'a_propos' || entry.target.id === 'competences') {
                                 navbar.classList.remove('text-noir');
                                 navbar.classList.add('text-blanc');
                             } else {
